--- a/src/CSS/Slider.css
+++ b/src/CSS/Slider.css
@@ -1,8 +1,9 @@
 .container-slider {
-    max-width: 700px;
-    height: 400px;
+    width: 100%;
+    max-width: 100%;
+    height: 500px;
     border-radius: 20px;
-    margin: 100px auto 0;
+    margin: 30px auto 0;
     position: relative;
     overflow: hidden;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
