--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -4,6 +4,11 @@
 
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.Link{
+    text-decoration: none;
+    color: inherit;
+}
  
 
 
