--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Abyssinica+SIL&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
@@ -10,6 +12,7 @@
     color: inherit;
     
 }
+
  
 
 
